correct date visibility in input date in calendar

--- a/style/calendar.css
+++ b/style/calendar.css
@@ -44,14 +44,15 @@ header h2 {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    max-width: 1920px;
+    max-width: 2160px;
     margin: 30px auto;
 }
 
 .form {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    width: 100vw;
     padding: 0 50px;
     font-size: 28px;
 }
@@ -75,6 +76,8 @@ header h2 {
 
 #container {
     padding: 5px;
+    width: 60vw;
+    min-width: 720px;
     border: 5px solid #30336b;
 }
 
@@ -249,4 +252,24 @@ h3 {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.8);
+}
+
+.goBack {
+    position: fixed;
+    bottom: 5vh;
+    right: 3vw;
+    width: 10vw;
+    height: 5vh;
+    background-color: transparent;
+}
+
+.goBack a {
+    display: block;
+    height: 100%;
+    line-height: 4vh;
+    width: 100%;
+    font-size: 2rem;
+    background-color: transparent;
+    text-decoration: none;
+    -webkit-text-stroke: .2px lightgray;
 }
