--- a/style/menuNew.css
+++ b/style/menuNew.css
@@ -11,6 +11,14 @@
     clear: both;
 }
 
+
+/* .crop {
+    width: 200px;
+    height: 200px;
+   
+    object-fit: cover;
+} */
+
 h1 {
     padding: 15px;
     background-color: rgba(0, 0, 0, 0.4);
@@ -86,6 +94,7 @@ section a {
     line-height: 40vh;
     min-height: 300px;
     font-family: 'Saira', sans-serif;
+    font-size: 1.8rem;
     text-transform: uppercase;
     text-align: center;
     text-decoration: none;
@@ -138,8 +147,8 @@ section a:hover {
     max-height: 920px;
     min-height: 250px;
     min-width: 250px;
-    /* object-fit: fill; */
     object-fit: cover;
+    border-radius: 8px;
 }
 
 .trip .desc {
